--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,12 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-/* img{
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-} */
+img{
+  /* display: block; */
+  /* margin: 0 auto; */
+  /* width: 100%; */
+  display: none;
+}
 
 #banner {
   background-image: url("https://images.pexels.com/photos/2908984/pexels-photo-2908984.jpeg");
@@ -34,6 +35,30 @@ h1 {
   border-radius: 2px;
   padding: 5px;
   /* margin-top: 20px; */
+}
+
+
+/* Book form */
+#bookInfo {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 10% 0 5%;
+}
+#bookForm{
+  margin-left: 5%;
+  line-height: 1.5;
+  height: 400px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+#bookForm button {
+  /* width: 12%; */
+}
+#bookInfo img {
+  display: block;
 }
 
 
